Agregado DIV contenedor

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <title>Git VSCODE</title>
     </head>
     <body>
-
+        <!-- DIV CONTENDOR 1-->
+        <div class="container">
+            <div class="row">
+                <p> Loren ipsum dolor, sit amet consectetur adipisicing elit. Iste, natus! </p>
+            </div>
+        </div>
 
     </body>
 </html>
